--- a/src/app/shared/image-viewer/image-viewer.component.html
+++ b/src/app/shared/image-viewer/image-viewer.component.html
@@ -5,22 +5,25 @@
         <mat-card-title>{{"user.form.profile_pic" | translate}}</mat-card-title>
       </mat-card-header> -->
       <div class="profile-image">
-        <!-- <img [src]="displayimage" /> -->
-        <ngx-image-zoom
-          [thumbImage]="displayimage"
-          [magnification]="1"
-          [enableScrollZoom]="true"
-          [enableLens]="true"
-          [lensWidth]="100"
-          [lensHeight]="100"
-        ></ngx-image-zoom>
+        <ng-container *ngFor="let image of product index as i">
+          <ng-container *ngIf="getnumber(i)">
+            <ngx-image-zoom
+              [thumbImage]="image.imageurl"
+              [magnification]="1.5"
+              [enableScrollZoom]="true"
+              [enableLens]="true"
+              [lensWidth]="150"
+              [lensHeight]="150"
+            ></ngx-image-zoom>
+          </ng-container>
+        </ng-container>
       </div>
     </mat-card>
   </div>
 
   <div fxFlex="40%" class="side-image">
-    <ng-container *ngFor="let image of product">
-      <mat-card class="small-card box-elevation-z8" (click)="changeimage(image.imageurl)">
+    <ng-container *ngFor="let image of product index as i">
+      <mat-card class="small-card box-elevation-z8" (click)="changeimage(i)">
         <div class="small-image">
           <img src="{{image.imageurl}}" />
         </div>
