--- a/src/app/features/cart-management/view-cartitems/view-cartitems.component.html
+++ b/src/app/features/cart-management/view-cartitems/view-cartitems.component.html
@@ -108,7 +108,12 @@
       </div>
     </div>
   </div> -->
-<div class="table-wrapper">
+<app-spinner
+  *ngIf="dimmed"
+  style="position: absolute;z-index: 999;left: 50%; top: 50%;"
+  [loading]="dataLoading"
+></app-spinner>
+<div class="table-wrapper" [ngClass]="{dimmed: dimmed}">
   <mat-table [dataSource]="dataSource" matSort class="box-elevation-z8">
     <ng-container matColumnDef="image">
       <mat-header-cell *matHeaderCellDef mat-sort-header>
@@ -138,6 +143,7 @@
               (keypress)="eventHandler($event)"
               matInput
               #qty
+              [formControl]="quantityformcontrol"
               type="number"
               min="1"
               max="{{ element.productqty }}"
@@ -167,7 +173,7 @@
           matTooltip="{{'tooltip.update' | translate}}"
           matTooltipPosition="left"
           [matTooltipShowDelay]="500"
-          (click)="updateCart(quantityformcontrol.value, cartitem)"
+          (click)="updateCart(quantityformcontrol.value, element)"
         >
           <mat-icon>refresh</mat-icon>
         </button>
@@ -222,19 +228,7 @@
 <mat-card class="total-card">
   {{"user.cart.total_price" | translate}} : Rs 8000
 </mat-card>
-<br /><br />
-<br /><br />
-<br />
-
-<!-- <div class="table-bottom">
-  <button mat-raised-button style="width: 40%;" [routerLink]="['/home']" color="primary">
-    {{"user.cart.continue_shopping" | translate}}
-  </button>
-  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-  <button mat-raised-button style="width: 40%;" [routerLink]="['/checkout/#']" color="warn">
-    {{"user.cart.checkout" | translate}}
-  </button>
-</div> -->
+<br /><br /><br /><br /><br />
 <mat-toolbar color="primary" class="c-bottom-action-bar u-text-right table-bottom">
   <button mat-raised-button style="width: 20%;" [routerLink]="['/home']">
     {{"user.cart.continue_shopping" | translate}}
