--- a/src/app/features/user-management/register/register.component.html
+++ b/src/app/features/user-management/register/register.component.html
@@ -30,14 +30,14 @@
           {{"user.form.email" | translate}} {{"user.form_validations.is_required" | translate}}
         </mat-error>
       </mat-form-field>
-      <mat-form-field class="input-full-width">
+      <!-- <mat-form-field class="input-full-width">
         <mat-label>Profile Pic</mat-label>
         <input autocomplete="off" matInput formControlName="photoFormControl" />
         <mat-error *ngIf="hasError('photoFormControl','required')">
           {{"user.form.profile_pic" | translate}} {{"user.form_validations.is_required" |
           translate}}
         </mat-error>
-      </mat-form-field>
+      </mat-form-field> -->
       <mat-form-field class="input-full-width">
         <mat-label>{{"user.form.password" | translate}}</mat-label>
         <input autocomplete="off" matInput formControlName="passwordFormControl" />
@@ -48,7 +48,30 @@
           {{"user.form.password" | translate}} {{"user.form_validations.is_required" | translate}}
         </mat-error>
       </mat-form-field>
+
+      <input
+        accept="image/*"
+        type="file"
+        formControlName="photoFormControl"
+        (change)="onImageSelected($event)"
+        #imageinput
+        style="display: none;"
+      />
+      <br />
+      <br />
+
+      <button color="primary" mat-raised-button (click)="imageinput.click()">
+        Upload A Profile Pic
+      </button>
+      <ng-container>
+        <img
+          class="register-image"
+          [src]="selectedimage != undefined? selectedimage
+        : '../../../../assets/images/icon-login-profile.svg'"
+        />
+      </ng-container>
     </form>
+    <br />
     <mat-card-content> </mat-card-content>
     <mat-card-actions>
       <button
